<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
	<string name="app_name">CatDroid Repository</string>
	<string name="descargando">Downloading</string>
	<string name="espere">Wait</string>
	<string name="descargado">Downloaded</string>
	<string name="update">Update</string>
	<string name="testLogin">Update</string>
	<string name="browse">Browse</string>
	<string name="usuario">Username</string>
	<string name="password">Password</string>
	<string name="readingXml">Reading XML</string>
	<string name="cargandoApps">Loading apps</string>
	<string name="connecting">Connecting to server</string>
	<string name="installed">Installed</string>
	<string name="installedVersion">Installed Version</string>
	<string name="serverVersion">Server Version</string>
	<string name="reinstall">Reinstall</string>
	<string name="alreadyInstalled">This app is already installed</string>
	<string name="uninstall">Uninstall</string>
	<string name="doNothing">Do nothing</string>
	<string name="settings">Settings</string>
	<string name="autoupdate">Autoupdate list</string>
	<string name="autoupdateFreq">Autoupdate frequency</string>
	<string name="updateAvailable">There is an update available for:</string>
	<string name="updatesAvailable">There are updates available</string>
	<string name="hoy">Today</string>
	<string name="ayer">Yesterday</string>
	<string name="diasAtras">days ago</string>
	<string name="browseDate">Browse by date</string>
	<string name="remaining">Remaining:</string>
	<string name="seconds">seconds</string>
	<string name="descargaCompletada">Download complete</string>
</resources>