<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:padding="10dip" android:gravity="center_horizontal">



<LinearLayout android:id="@+id/LinearLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content"><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnCheck" android:textSize="12dip" android:text="@string/testLogin"></Button>

<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="12dip" android:text="@string/settings" android:id="@+id/btnSettings"></Button></LinearLayout><LinearLayout android:id="@+id/LinearLayout02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dip" android:layout_marginBottom="10dip"><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/btnBrowse" android:textSize="12dip" android:text="@string/browse"></Button><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="12dip" android:id="@+id/btnBrowseDate" android:text="@string/browseDate"></Button><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="12dip" android:text="@string/installed" android:id="@+id/btnInstaladas"></Button></LinearLayout>




</LinearLayout>
